--- a/latex/_board_8h.tex
+++ b/latex/_board_8h.tex
@@ -1,7 +1,6 @@
 \hypertarget{_board_8h}{}\doxysection{Board.\+h File Reference}
 \label{_board_8h}\index{Board.h@{Board.h}}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
