--- a/latex/_game_8cpp.tex
+++ b/latex/_game_8cpp.tex
@@ -3,8 +3,7 @@
 {\ttfamily \#include \char`\"{}Game.\+h\char`\"{}}\newline
 {\ttfamily \#include $<$iostream$>$}\newline
 {\ttfamily \#include $<$vector$>$}\newline
-Include dependency graph for Game.\+cpp\+:
-\nopagebreak
+Include dependency graph for Game.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
