--- a/latex/_game_8h.tex
+++ b/latex/_game_8h.tex
@@ -3,16 +3,14 @@
 {\ttfamily \#include \char`\"{}Board.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}Players.\+h\char`\"{}}\newline
 {\ttfamily \#include $<$vector$>$}\newline
-Include dependency graph for Game.\+h\+:
-\nopagebreak
+Include dependency graph for Game.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=265pt]{_game_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
