--- a/latex/_players_8cpp.tex
+++ b/latex/_players_8cpp.tex
@@ -4,8 +4,7 @@
 {\ttfamily \#include $<$random$>$}\newline
 {\ttfamily \#include \char`\"{}Players.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}Board.\+h\char`\"{}}\newline
-Include dependency graph for Players.\+cpp\+:
-\nopagebreak
+Include dependency graph for Players.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
