--- a/latex/_players_8h.tex
+++ b/latex/_players_8h.tex
@@ -1,7 +1,6 @@
 \hypertarget{_players_8h}{}\doxysection{Players.\+h File Reference}
 \label{_players_8h}\index{Players.h@{Players.h}}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
