--- a/latex/_screen_8h.tex
+++ b/latex/_screen_8h.tex
@@ -1,16 +1,14 @@
 \hypertarget{_screen_8h}{}\doxysection{Screen.\+h File Reference}
 \label{_screen_8h}\index{Screen.h@{Screen.h}}
 {\ttfamily \#include \char`\"{}Game.\+h\char`\"{}}\newline
-Include dependency graph for Screen.\+h\+:
-\nopagebreak
+Include dependency graph for Screen.\+h\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=265pt]{_screen_8h__incl}
 \end{center}
 \end{figure}
-This graph shows which files directly or indirectly include this file\+:
-\nopagebreak
+This graph shows which files directly or indirectly include this file\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
