--- a/latex/class_board.tex
+++ b/latex/class_board.tex
@@ -72,8 +72,7 @@ int \mbox{\hyperlink{class_board_a50bc031c4e4ffab2c107e58a62c5a3a9}{n}}
 \doxysubsubsection{\texorpdfstring{checkWin()}{checkWin()}}
 {\footnotesize\ttfamily bool Board\+::check\+Win (\begin{DoxyParamCaption}\item[{char}]{player }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -86,8 +85,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{getBoardField()}{getBoardField()}}
 {\footnotesize\ttfamily char Board\+::get\+Board\+Field (\begin{DoxyParamCaption}\item[{int}]{r,  }\item[{int}]{c }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -100,8 +98,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{getN()}{getN()}}
 {\footnotesize\ttfamily int Board\+::getN (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption}) const}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -114,8 +111,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{isFull()}{isFull()}}
 {\footnotesize\ttfamily bool Board\+::is\+Full (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -134,8 +130,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{printBoard()}{printBoard()}}
 {\footnotesize\ttfamily void Board\+::print\+Board (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -148,8 +143,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{setBoardField()}{setBoardField()}}
 {\footnotesize\ttfamily void Board\+::set\+Board\+Field (\begin{DoxyParamCaption}\item[{int}]{r,  }\item[{int}]{c,  }\item[{char}]{val }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
