--- a/latex/class_game.tex
+++ b/latex/class_game.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for Game\+:
-\nopagebreak
+Inheritance diagram for Game\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for Game\+:
 \end{figure}
 
 
-Collaboration diagram for Game\+:
-\nopagebreak
+Collaboration diagram for Game\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -62,8 +60,7 @@ vector$<$ \mbox{\hyperlink{class_players}{Players}} $\ast$ $>$ \mbox{\hyperlink{
 \doxysubsubsection{\texorpdfstring{Game()}{Game()}\hspace{0.1cm}{\footnotesize\ttfamily [1/2]}}
 {\footnotesize\ttfamily Game\+::\+Game (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -91,8 +88,7 @@ Here is the call graph for this function\+:
 \doxysubsubsection{\texorpdfstring{InitBoard()}{InitBoard()}}
 {\footnotesize\ttfamily int Game\+::\+Init\+Board (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -105,8 +101,7 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{InitPlayers()}{InitPlayers()}}
 {\footnotesize\ttfamily void Game\+::\+Init\+Players (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -125,16 +120,14 @@ Here is the caller graph for this function\+:
 \doxysubsubsection{\texorpdfstring{play()}{play()}}
 {\footnotesize\ttfamily void Game\+::play (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=277pt]{class_game_aa333825d0bca80e91e53c7e23f053405_cgraph}
 \end{center}
 \end{figure}
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -151,8 +144,7 @@ Here is the caller graph for this function\+:
 
 Implemented in \mbox{\hyperlink{class_screen_acad000527009f3642108551ae7c4c269}{Screen}}.
 
-Here is the caller graph for this function\+:
-\nopagebreak
+Here is the caller graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
