--- a/latex/class_human.tex
+++ b/latex/class_human.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for Human\+:
-\nopagebreak
+Inheritance diagram for Human\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for Human\+:
 \end{figure}
 
 
-Collaboration diagram for Human\+:
-\nopagebreak
+Collaboration diagram for Human\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -89,8 +87,7 @@ char \mbox{\hyperlink{class_players_aef057de289faefe3ff70c94a713247d9}{symbol}}
 
 Implements \mbox{\hyperlink{class_players_ac90cfe99a15f31f44b51f763be4715b3}{Players}}.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
