--- a/latex/class_players.tex
+++ b/latex/class_players.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for Players\+:
-\nopagebreak
+Inheritance diagram for Players\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
