--- a/latex/class_screen.tex
+++ b/latex/class_screen.tex
@@ -6,8 +6,7 @@
 
 
 
-Inheritance diagram for Screen\+:
-\nopagebreak
+Inheritance diagram for Screen\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -16,8 +15,7 @@ Inheritance diagram for Screen\+:
 \end{figure}
 
 
-Collaboration diagram for Screen\+:
-\nopagebreak
+Collaboration diagram for Screen\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -97,8 +95,7 @@ void \mbox{\hyperlink{class_screen_acad000527009f3642108551ae7c4c269}{View\+Boar
 
 Implements \mbox{\hyperlink{class_game_a5f830b927f4a21bd6934e58d81b66118}{Game}}.
 
-Here is the call graph for this function\+:
-\nopagebreak
+Here is the call graph for this function\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
