--- a/latex/_board_8cpp.tex
+++ b/latex/_board_8cpp.tex
@@ -2,8 +2,7 @@
 \label{_board_8cpp}\index{Board.cpp@{Board.cpp}}
 {\ttfamily \#include $<$iostream$>$}\newline
 {\ttfamily \#include \char`\"{}Board.\+h\char`\"{}}\newline
-Include dependency graph for Board.\+cpp\+:
-\nopagebreak
+Include dependency graph for Board.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
