--- a/latex/_screen_8cpp.tex
+++ b/latex/_screen_8cpp.tex
@@ -2,8 +2,7 @@
 \label{_screen_8cpp}\index{Screen.cpp@{Screen.cpp}}
 {\ttfamily \#include \char`\"{}Screen.\+h\char`\"{}}\newline
 {\ttfamily \#include $<$iostream$>$}\newline
-Include dependency graph for Screen.\+cpp\+:
-\nopagebreak
+Include dependency graph for Screen.\+cpp\+:\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
